moved everything to src folder.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <h1 id="primaryBlock">This is a Webpack template for Sass and Typescripts</h1>    
+    <h1 id="primaryBlock">This is a Webpack template for Sass and Typescript</h1>    
   </body>
 </html>
