Images are working.

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Template for webpack sass and Typescript</title>
   </head>
   <body>
-    <h1 id="primaryBlock">This is a Webpack template for Sass and Typescript</h1>    
+    <h1 id="primaryBlock">This is a Webpack template for Sass and Typescript !</h1>   
+    <div>
+      <img src="img/webpack-logo.png" alt="webpack-logo">
+    </div> 
   </body>
 </html>
